# Sogo

./: .env.example  .gitignore  DEPLOYMENT.md  HTML-AND-AVATAR-FEATURES.md  INDEX.md  Makefile  QUICKSTART.md  README-FIRST.md  README.md  SETUP.md  TRANSFER-TO-DEDI.md  deploy.bat  deploy.sh  docker-compose.yml  setup.sh
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_init.sql
backend/src/: config.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  bimi.rs  emails.rs  mod.rs
backend/src/mailcow/: mod.rs
backend/src/services/: auth.rs  email.rs
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EmailAvatar.tsx  EmailList.tsx  EmailViewer.tsx  Header.tsx  HtmlEmail.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  avatars.ts
frontend/src/store/: mailStore.ts
nginx/: nginx.conf
