[package]
name = "mythofy-mail-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql"] }
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
bcrypt = "0.15"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
mail-parser = "0.9"
async-imap = "0.9"
async-native-tls = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
